--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="container-fluid">
 	<div class="row">
 		
-		<div class="col-lg-8 mx-auto asif">
+		<div class="col-lg-6 mx-auto ">
 			<lottie-player src="https://assets5.lottiefiles.com/packages/lf20_mvtopocg.json"  background="transparent"  speed="1"  style="width: 600px; height: 500px;"  loop  autoplay></lottie-player>
 		</div>
 
