--- a/index.html
+++ b/index.html
@@ -15,6 +15,119 @@
 </head>
 <body>
 
+<div class="navbar">
+        <div class="container nav-container">
+            <input class="checkbox" type="checkbox" name="" id="" data-bs-toggle="offcanvas" data-bs-target="#offcanvasStart" aria-controls="offcanvasStart" />
+            <div class="hamburger-lines">
+              <span class="line line1"></span>
+              <span class="line line2"></span>
+              <span class="line line3"></span>
+            </div> 
+        </div>
+      </div>
+      
+    <div class="container">
+      <div class="row">
+        <!--<div class="col-lg-4 mx-auto py-3">
+          <i class="fas fa-2x twit fa-bars text-start" data-bs-toggle="offcanvas" data-bs-target="#offcanvasStart" aria-controls="offcanvasStart"></i>
+        </div>-->
+        <div class="col-lg-11 py-2 text-start">
+          <img src="<?php echo base_url('images/logo/logo.png'); ?>" class="img-fluid" width="300">
+        </div>
+        <div class="col-lg-12 ms-auto my-auto text-end py-2 d-lg-block d-none">
+          <a class="nav-link text-dark" href="#search_bar" role="button" data-bs-toggle="collapse" aria-expanded="false" aria-controls="search_bar">
+            <i class="fas fa-search twit fa-1x"></i>
+          </a>
+          <div class="collapse bg-none" id="search_bar">
+            <div class="container px-lg-5">
+              <div class="row">
+                <div class="col py-2">
+                  <input type="text" class="form-control rounded-0" placeholder="Search" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!----------------------------------------------------------------------------------------------------->
+    <div class="offcanvas offcanvas-start mt-5" tabindex="-1" id="offcanvasStart" aria-labelledby="offcanvasStartLabel">
+      <div class="offcanvas-body text-dark menu-items">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item ms-3">
+            <a class="nav-link text-dark" href="#">Home</a>
+          </li>
+          <li class="nav-item ms-3">
+            <a class="nav-link text-dark" href="#">News</a>
+          </li>
+          <li class="nav-item dropdown ms-3">
+            <a class="nav-link text-dark" href="#martechradar" role="button" data-bs-toggle="collapse" aria-expanded="false" aria-controls="martechradar">
+              Martech Radar <i class="fas fa-angle-right ms-2"></i>
+            </a>
+          </li>
+          <li class="nav-item ms-3">
+            <a class="nav-link text-dark" href="#">Interviews</a>
+          </li>
+          <li class="nav-item ms-3">
+            <a class="nav-link text-dark" href="#">Contact</a>
+          </li>
+          <li class="nav-item ms-3">
+            <a class="nav-link text-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom" href="#">Blog</a>
+          </li>
+        </ul>
+
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item ms-3">
+            <a class="nav-link text-dark" href="#"><i class="fas fa-user"></i></a>
+          </li>
+        </ul>
+              
+        <div class="collapse bg-light" id="martechradar">
+          <div class="container px-lg-5">
+            <div class="row">
+              <div class="col">
+                <div class="px-2 py-3">
+                  <a href="#" class="fw-bold text-decoration-none"><h1 class="badge bg-primary py-2">AI / ML</h1></a> 
+                  <a href="#" class="fw-bold text-decoration-none"><h1 class="badge bg-primary py-2">Audio Advertising</h1></a>
+                  <a href="#" class="fw-bold text-decoration-none"><h1 class="badge bg-primary py-2">Business</h1></a> 
+                  <a href="#" class="fw-bold text-decoration-none"><h1 class="badge bg-primary py-2">Content Marketing</h1></a> 
+                  <a href="#" class="fw-bold text-decoration-none"><h1 class="badge bg-primary py-2">Customer Experience Management</h1></a> 
+                  <a href="#" class="fw-bold text-decoration-none"><h1 class="badge bg-primary py-2">Digital Assets Management</h1></a> 
+                  <a href="#" class="fw-bold text-decoration-none"><h1 class="badge bg-primary py-2">Identity Management</h1></a> 
+                  <a href="#" class="fw-bold text-decoration-none"><h1 class="badge bg-primary py-2">Analytics</h1></a> 
+                  <a href="#" class="fw-bold text-decoration-none"><h1 class="badge bg-primary py-2">Automation</h1></a> 
+                  <a href="#" class="fw-bold text-decoration-none"><h1 class="badge bg-primary py-2">Business Intelligence</h1></a> 
+                  <a href="#" class="fw-bold text-decoration-none"><h1 class="badge bg-primary py-2">Content Syndication</h1></a> 
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="collapse" id="interviews">
+          <div class="container px-lg-5">
+            <div class="row">
+              <div class="col">
+                <div class="px-2 py-3">
+                  <a href="#" class="fw-bold text-decoration-none text-uppercase">AI / ML</a>
+                </div>
+                <div class="px-2 py-3">
+                  <a href="#" class="fw-bold text-decoration-none text-uppercase">Audio Advertising</a>
+                </div>
+                <div class="px-2 py-3">
+                  <a href="#" class="fw-bold text-decoration-none text-uppercase">Audio Advertising</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
+
+
 <div class="container-fluid">
 	<div class="row">
 		
